<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020-2022 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Ambient settings -->
    <string name="ambient_enable">Use Ambient display</string>

    <!-- HBM settings -->
    <string name="hbm_fragment_title">High brightness mode</string>
    <string name="hbm_fragment_summary">Settings for HBM</string>
    <string name="hbm_mode_title">HBM</string>
    <string name="hbm_mode_summary">Enable peak luminance</string>
    <string name="auto_hbm_title">Automatic HBM</string>
    <string name="auto_hbm_summary">Enable peak luminance based on sunlight</string>
    <string name="auto_hbm_threshold_title"></string>
    <string name="auto_hbm_threshold_summary">threshold (lux)</string>
    <string name="hbm_disable_time_title"></string>
    <string name="hbm_disable_time_summary">disable delay (seconds)</string>
    <string name="hbm_mode_warning">Long time usage of High brightness mode may damage your display</string>

    <!-- Popup camera settings -->
    <string name="popup_led_title">Camera LED</string>
    <string name="popup_led_summary">Show LED light when the front camera appears and retracts</string>
    <string name="popup_title">Front camera sound effects</string>
    <string name="popup_title_muqin">Xylophone</string>
    <string name="popup_title_yingyan">Condor</string>
    <string name="popup_title_mofa">Magic</string>
    <string name="popup_title_jijia">Mecha</string>
    <string name="popup_title_chilun">Gearwheel</string>
    <string name="popup_title_cangmen">Cabin door</string>

    <!-- Popup camera strings -->
    <string name="popup_camera_tip">Warning</string>
    <string name="popup_camera_takeback_failed_times_calibrate">Couldn\'t close front camera multiple times. Try calibrating the camera.</string>
    <string name="popup_camera_popup_failed_times_calibrate">Couldn\'t open front camera multiple times. Try calibrating the camera.</string>
    <string name="popup_camera_calibrate_running">Front camera cannot be used during calibration.</string>
    <string name="popup_camera_calibrate_now">Calibrate</string>
    <string name="popup_camera_calibrate_failed">Couldn\'t calibrate</string>
    <string name="popup_camera_calibrate_success">Calibrated successfully. You can open the front camera now.</string>
    <string name="stop_operate_camera_frequently">You\'re opening the front camera too frequently.</string>
    <string name="takeback_camera_front_failed">Couldn\'t close front camera. Try again.</string>
    <string name="popup_camera_front_failed">Couldn\'t open front camera. Try again.</string>

    <!-- Thermal Profiles -->
    <string name="thermal_title">Thermal Profiles</string>
    <string name="thermal_summary">Adjust per-app thermal profiles for optimum performance</string>
    <string name="thermal_default">Default</string>
    <string name="thermal_benchmark">Benchmark</string>
    <string name="thermal_browser">Browser</string>
    <string name="thermal_camera">Camera</string>
    <string name="thermal_dialer">Dialer</string>
    <string name="thermal_gaming">Gaming</string>
    <string name="thermal_streaming">Streaming</string>

    <!-- Refresh Rate Settings -->
    <string name="refresh_rate_tile_title">Refresh Rate</string>

    <!-- Raise to wake strings-->
    <string name="raise_to_wake_gesture_title">Raise to wake</string>
    <string name="raise_to_wake_gesture_summary">Wake up the device instead of pulsing notification</string>

    <!-- Per-app refresh rate -->
    <string name="refresh_title">Per-app refresh rate</string>
    <string name="refresh_summary">Set the maximum refresh rate for a specific application</string>
    <string name="refresh_default">Default</string>
    <string name="refresh_standard">60Hz</string>    
    <string name="refresh_extreme">120Hz</string>    

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.\n\nWARNING: Ensure that any headphones are unplugged.</string>

    <!-- Dirac settings -->
    <string name="dirac_enable">Use Mi Sound Enhancer</string>
    <string name="dirac_title">Mi Sound Enhancer</string>
    <string name="dirac_summary">Optimize audio quality</string>
    <string name="dirac_headset_title">Choose headphones type</string>
    <string name="dirac_preset_title">Choose a preset</string>

    <!-- Dirac settings: Hi-Fi -->
    <string name="dirac_hifi_title">Hi-Fi</string>
    <string name="dirac_hifi_summary">Decrease noise and Distortion and increase audio quality</string>
    <string name="dirac_hifi_enable_title">Enable Hi-fi</string>

    <!-- Dirac settings: Headset types -->
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston-1</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston-2</string>
    <string name="dirac_headset_piston_standard">Standard Edition</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling Type-C</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling 3.5mm</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>
    <string name="dirac_headset_ear_four">Mi Quadruple Driver Earphones</string>
    <string name="dirac_headset_piston_typec">Mi In-Ear Headphones (Type-C)</string>
    <string name="dirac_headset_bluetooth_collar">Mi Bluetooth Neckband</string>
    <string name="dirac_headset_bluetooth_linefree">Mi Bluetooth Earphones</string>
    <string name="dirac_headset_redmi_earphones">Redmi Earphones</string>

    <!-- Dirac settings: Equalizer presets -->
    <string name="dirac_preset_live">Live</string>
    <string name="dirac_preset_balanced">Balanced</string>
    <string name="dirac_preset_bass_reduction">Bass Reduction</string>
    <string name="dirac_preset_treble_reduction">Treble Reduction</string>
    <string name="dirac_preset_soft_bass">Soft Bass</string>
    <string name="dirac_preset_soft_treble">Soft Treble</string>
    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>
    <string name="dirac_preset_bass_booster">Bass Booster</string>

    <!-- Scene Selection -->
    <string name="music_headset_scenario_select">Select scene</string>
    <string name="music_headset_scenario_intelligent">Smart</string>
    <string name="music_headset_scenario_music">Music</string>
    <string name="music_headset_scenario_video">Video</string>
    <string name="music_headset_scenario_vocal">Voice</string>

    <!-- DC dimming settings -->
    <string name="dc_dimming_enable_title">DC Dimming</string>
    <string name="dc_dimming_enable_summary">Reduces eye strain in low light conditions</string>
    <string name="dc_dimming_enable_summary_not_supported">DC Dimming is currently not supported by the kernel</string>

    <!-- Kcal -->
    <string name="kcal_settings_title">Kernel color calibration</string>
    <string name="kcal_settings_summary">Calibrate display via Kcal</string>
    <string name="kcal_values">Adjustable values</string>
    <string name="red_title">Red</string>
    <string name="green_title">Green</string>
    <string name="blue_title">Blue</string>
    <string name="saturation_title">Saturation</string>
    <string name="contrast_title">Contrast</string>
    <string name="hue_title">Hue</string>
    <string name="value_title">Value</string>
	<string name="graphics_title">Preview</string>
	<string name="kcal_settings">Settings</string>
</resources>
