<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2021-2022 crDroid Android Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/org.lineageos.settings"
    xmlns:aicpextras="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Start of display Category -->
    <PreferenceCategory
        android:key="display"
        android:title="@string/graphics_title">

        <Preference
            android:key="kcal"
            android:icon="@drawable/ic_panel"
            android:title="@string/kcal_settings_title"
            android:summary="@string/kcal_settings_summary"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.lineageos.settings"
                    android:targetClass="org.lineageos.settings.kcal.KcalSettingsActivity" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>